# metadata-server

./: CHANGELOG.md  README.md  cabal-nix.project  cabal.project  default.nix  shell.nix
.buildkite/: pipeline.yaml
docs/: default.nix  main.org
metadata-lib/: metadata-lib.cabal
metadata-lib/src/Cardano/Metadata/: Types.hs
metadata-lib/src/Cardano/Metadata/Server/: Types.hs
metadata-lib/src/Test/Cardano/Metadata/: Generators.hs
metadata-lib/test/: Main.hs
metadata-server/src/: Config.hs
metadata-validator/: metadata-validator.cabal
metadata-validator-github/: metadata-validator-github.cabal
metadata-validator-github/src/: Config.hs  Main.hs
metadata-validator-github/src/Cardano/Metadata/Validate/: GitHub.hs
metadata-validator/src/: Main.hs
metadata-webhook/src/: Config.hs
nix/: default.nix  haskell.nix  sources.json
specifications/wallet/: submission-schema.json
